tests/errors/known_bugs/TOO_FEW_ARGS.py
# pylint: disable=missing-function-docstring, missing-module-docstring, no-value-for-parameter

def f(b:'int'):
    print(b)

f()
